Clear out old roots

--- a/template/base.html
+++ b/template/base.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">        
-		<title>{% block title %}User accounts demo{% endblock %}</title>
+		<title>{% block title %}Dhamma Map{% endblock %}</title>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 		<script src="../static/jquery-blockUI.js"></script>
         <style>
@@ -36,12 +36,6 @@
                     | <a href="/a/signup">New user</a>
                     | <a href="/secure{{ token }}">Secured page</a> (you can see this after login)
                  </p>
-                <p>
-                    Got questions? <a href="http://blog.abahgat.com/about">Get in touch</a>.
-                    <small> And if you want to <strong>donate</strong> a little something, 
-						<a href="http://abahgat.github.io/webapp2-user-accounts#donate">here</a> a few options.
-                    </small>
-                </p>
             </footer>
         </div>
  		<script src="../static/dhammamap.js"></script>
