--- a/template/home.html
+++ b/template/home.html
@@ -1,14 +1,11 @@
 {% extends "base.html" %}
 
 {% block maincontent %}
-<h1>This is a demo</h1>
-<p>Skeleton implementation for user account management with webapp2.</p>
+<h1>Dhamma Map</h1>
+<p>Skeleton implementation for Dhamma Map.</p>
 
 <p>You will have to take care of the following items:</p>
 <ol>
-    <li>
-        <del>Implement user registration, login, email verification, password recovery</del>
-    </li>
     <li>
         Send email verification and password recovery messages via email
     </li>
@@ -20,10 +17,6 @@
 
 <p>Try it out by registering <a href="/a/signup">here</a>.
 </p>
-<p><b>Find more information in the tutorial 
-        <a href="http://blog.abahgat.com/2013/01/07/user-authentication-with-webapp2-on-google-app-engine">
-        here</a>.
-    </b>
-</p>
+
 
 {% endblock %}
