--- a/template/login.html
+++ b/template/login.html
@@ -29,7 +29,7 @@
 {% block maincontent %}
 <div id="form">
 	<h1>Login</h1>
-	<form action="/s/login" method="POST">
+	<form action="/login" method="POST">
 		{{ m.input_csrf() }}
 		<label>email address
 			<input type="email" value="{{ email }}" name="email"  required minlength="5" pattern=".{5,}"
