--- a/template/login.html
+++ b/template/login.html
@@ -27,7 +27,7 @@
 {% endblock %}
 
 {% block maincontent %}
-<div id="form">
+<div id="formdiv">
 	<h1>Login</h1>
 	<form action="/login" method="POST">
 		{{ m.input_csrf() }}
