--- a/code/template/admin.html
+++ b/code/template/admin.html
@@ -3,7 +3,7 @@
 {% block maincontent %}
 
 <form action="/admin/newkeys" method="post">
-    {{ m.input_csrf() }}
+    {{ mcr.input_csrf() }}
 	<button>New Keys</button>
 </form>
 
