--- a/code/template/home.html
+++ b/code/template/home.html
@@ -15,7 +15,7 @@
     </li>
 </ol>
 
-<p>Try it out by registering <a href="/a/signup">here</a>.
+<p>Try it out by registering <a href="/signup">here</a>.
 </p>
 
 
