--- a/code/template/resetpassword.html
+++ b/code/template/resetpassword.html
@@ -3,13 +3,14 @@
 {% block maincontent %}
 	<h1>Reset password</h1>
 	<form action="/np/x" method="post">
-		{{ m.input_csrf() }}
-		{% include "input password.html" %}
+		{{ mcr.input_csrf() }}
+		<input disabled name="ema" value="{{ email }}"><!--type="hidden"-->
 		<br>
-		<label>Re-type password</label>
-		<input type="password" name="confirm_password" >
+		{{ mcr.input_password() }}
 		<br>
-		<input type="hidden" name="t" value="{{ token }}">
+		<label for=pwd2>Re-type password</label>
+		<input id =pwd2 type="password" name="confirm_password" >
+		<br>
 		<input type="submit" value="Update password" >
 	</form>
 {% endblock %}
