--- a/code/template/signup.html
+++ b/code/template/signup.html
@@ -3,12 +3,12 @@
 {% block title %}Register a new user{% endblock %}
 
 {% block maincontent %}
-<div>
+<div id="formdiv">
     <h1>Register a new user!
     </h1>
     <form action="/signup" method="POST">
-        {{ m.input_csrf() }}
-        {% include "input email.html" %}
+        {{ mcr.input_csrf() }}
+        {{ mcr.input_email() }}
         <br>
         <br>
         <input type="submit" value="Create user" >
@@ -17,4 +17,5 @@
 {% endblock %}
 
 {% block mediaJS %}
+<script src="../static/dhammamap.js"></script>
 {% endblock %}    
