--- a/code/template/signup1 - Copy (2).html
+++ b/code/template/signup1 - Copy (2).html
@@ -6,12 +6,12 @@
     <h1>Register a new user!
     </h1>
     <form action="/signup" method="POST">
-		{{ m.input_csrf() }}
+		{{ mcr.input_csrf() }}
         <label for="username">Username</label>
         <input type="text" name="username" >
         <br>
-        <label for="email">Email address</label>
-        <input type="text" name="email" >
+        <label for="ema">Email address</label>
+        <input type="text" name="ema" >
         <br>
         <label for="password">Password</label>
         <input type="password" name="password" >
